--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
     "mini-css-extract-plugin": "0.4.3",
-    "node-sass": "^4.9.4",
+    "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -111,5 +111,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "react-ui-cards": "^1.4.0"
   }
 }
