--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dev-utils": "^6.0.5",
     "react-dom": "^16.5.2",
     "react-id-swiper": "^1.6.8",
+    "react-lottie": "^1.2.3",
     "react-motion": "^0.5.2",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
