--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
+    "konva": "^2.5.1",
     "mini-css-extract-plugin": "0.4.3",
     "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
@@ -40,11 +41,12 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.0.6",
     "postcss-safe-parser": "4.0.1",
-    "react": "^16.5.2",
+    "react": "^16.6.3",
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.0.5",
-    "react-dom": "^16.5.2",
+    "react-dom": "^16.6.3",
     "react-id-swiper": "^1.6.8",
+    "react-konva": "^16.6.31",
     "react-lottie": "^1.2.3",
     "react-motion": "^0.5.2",
     "resolve": "1.8.1",
