<Parallax> Init, <Main> Layout Fix.

--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "react-konva": "^16.6.31",
     "react-lottie": "^1.2.3",
     "react-motion": "^0.5.2",
+    "react-parallax": "^2.0.1",
+    "react-router-dom": "^4.3.1",
+    "react-sweet-progress": "^1.1.2",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
